# omni-skill

./: .agnix.toml  .gitignore  .rumdl.toml  Justfile  README.md  context7.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md
examples/: __init__.py  checkout_example.py
examples/backend-api-master/datasets/: api_standards.csv  auth_patterns.md  db_best_practices.md
features/: __init__.py  checkout.feature  environment.py  indexing.feature  search.feature  types.py
features/steps/: checkout_steps.py  indexing_steps.py  search_steps.py
skills/backend-api-master/: SKILL.md  datasets  search.py
specs/2026-03-26-01-omniskill-framework/: design.md  tasks.md
specs/2026-03-26-01-omniskill-framework/features/: assembly.feature  cli.feature  indexing.feature  search.feature
src/omniskill/: __init__.py  cli.py  config.py  exceptions.py  protocols.py
src/omniskill/core/: __init__.py  assembler.py  checkout.py  engine.py  generator.py  indexer.py  search.py
src/omniskill/models/: __init__.py
tests/: __init__.py  test_checkout.py  test_checkout_properties.py  test_cli.py  test_core.py  test_e2e.py  test_generator.py  test_indexer.py  test_models.py  test_protocols.py  test_search.py
